--- a/index.html
+++ b/index.html
@@ -4,12 +4,75 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bengkalis Island</title>
-  <link href='/style.css' rel='stylesheet'>
+  <link href='style.css' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Sans+Khojki&family=Whisper&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Sans+Khojki&family=Whisper&display=swap" rel="stylesheet">
+
 </head>
 <body>
+  <div id="loading">
+    <div class="loader">
+      <img src="assets/logo/Loading.gif" alt="">
+    </div>
+  </div>
+  <!-- Header Start-->
+  <header>
+    <nav class="navbar">
+      <!-- <div class="nav-desktop">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+          <img class="logo" src="assets/Bengkalis Logo.png" alt="">
+        <a href="#destination">Destination</a>
+        <a href="#culture">Culture</a>
+      </div> -->
 
+      <div class="nav-mobile">
+        <a  href="#about"><img src="assets/logo/about.svg" alt=""></a>
+        <a class="" href="#home" ><img src="assets/logo/home.svg" alt=""></a>
+        <a  href="#destination"><img src="assets/logo/destination.svg" alt=""></a>
+        <a  href="#destination"><img src="assets/logo/destination.svg" alt=""></a>
+      </div>
+    </nav>
+  </header>
+  <!-- Header End -->
+
+  <!-- Hero Start -->
+  <section class="hero">
+    <main class="content">
+        <h1>Welcome to Bengkalis</h1>
+        <h2>Negeri Junjugan</h2>
+        <p>Discover the natural beauty, cultural richness, and friendliness of the people of Bengkalis</p>
+        <a href="">Explore Bengkalis</a>
+        <div class="information">
+        <p>test</p>
+        </div>
+    </main>
+  </section>
+    <!-- Hero End -->
+
+    <!-- About Start -->
+  <main>
+    <div id="content">
+      <article>
+
+      </article>
+      <article>
+
+      </article>
+    </div>
+    <aside>
+
+    </aside>
+  </main>
+  <!-- About End -->
+
+  <!-- Footer Start -->
+  <!-- Footer End -->
   
-  
-  <script defer type="text/javascript" src="/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
