--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
   <!-- Header Start-->
   <header>
     <nav class="navbar">
-      <!-- <div class="nav-desktop">
+      <div class="nav-desktop">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-          <img class="logo" src="assets/Bengkalis Logo.png" alt="">
+        <div class="logo">
+          <img class="logo" src="assets/logo/Bengkalis Logo.png" alt="">
+        </div>
         <a href="#destination">Destination</a>
         <a href="#culture">Culture</a>
-      </div> -->
+      </div>
 
       <div class="nav-mobile">
         <a  href="#about"><img src="assets/logo/about.svg" alt=""></a>
         <a class="" href="#home" ><img src="assets/logo/home.svg" alt=""></a>
         <a  href="#destination"><img src="assets/logo/destination.svg" alt=""></a>
-        <a  href="#destination"><img src="assets/logo/destination.svg" alt=""></a>
+        <!-- <a  href="#destination"><img src="assets/logo/destination.svg" alt=""></a> -->
       </div>
     </nav>
   </header>
@@ -46,9 +48,9 @@
         <h1>Welcome to Bengkalis</h1>
         <h2>Negeri Junjugan</h2>
         <p>Discover the natural beauty, cultural richness, and friendliness of the people of Bengkalis</p>
-        <a href="">Explore Bengkalis</a>
+        <a href="">Explore Bengkalis</a>  
         <div class="information">
-        <p>test</p>
+        <p>Masjid Istiqomah merupakan...</p>
         </div>
     </main>
   </section>
@@ -72,7 +74,7 @@
 
   <!-- Footer Start -->
   <!-- Footer End -->
-  
+  <audio autoplay="true" preload="auto" loop src="assets/music/Ladyfingers.m4a"></audio>
   <script src="main.js"></script>
 </body>
 </html>
