--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
       <div class="nav-desktop">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <div class="logo">
-          <img class="logo" src="assets/logo/Bengkalis Logo.png" alt="">
-        </div>
+        <div class="logo"><a href="#">
+          <img class="logo" src="assets/logo/Bengkalis Logo.png" alt="Bengkalis, Riau" title="Bengkalis, Riau"/>
+        </div></a>
         <a href="#destination">Destination</a>
         <a href="#culture">Culture</a>
       </div>
 
       <div class="nav-mobile">
-        <a  href="#about"><img src="assets/logo/about.svg" alt=""></a>
-        <a class="" href="#home" ><img src="assets/logo/home.svg" alt=""></a>
-        <a  href="#destination"><img src="assets/logo/destination.svg" alt=""></a>
+        <a  href="#about"><img src="assets/logo/about.svg" alt="About Bengkalis" title="About Bengkalis"></a>
+        <a class="" href="#home" ><img src="assets/logo/home.svg" alt="Home" title="Home"></a>
+        <a  href="#destination"><img src="assets/logo/destination.svg" alt="Destination" title="Destination"></a>
         <!-- <a  href="#destination"><img src="assets/logo/destination.svg" alt=""></a> -->
       </div>
     </nav>
@@ -48,16 +48,16 @@
         <h1>Welcome to Bengkalis</h1>
         <h2>Negeri Junjugan</h2>
         <p>Discover the natural beauty, cultural richness, and friendliness of the people of Bengkalis</p>
-        <a href="">Explore Bengkalis</a>  
+        <div class="btn"><a href="">Explore Bengkalis</a></div>  
         <div class="information">
-        <p>Masjid Istiqomah merupakan...</p>
+        <!-- <p>Masjid Istiqomah meruoakan...</p> -->
         </div>
     </main>
   </section>
     <!-- Hero End -->
 
     <!-- About Start -->
-  <main>
+  <main class="about">
     <div id="content">
       <article>
 
@@ -75,6 +75,7 @@
   <!-- Footer Start -->
   <!-- Footer End -->
   <audio autoplay="true" preload="auto" loop src="assets/music/Ladyfingers.m4a"></audio>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
 </html>
