--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
       <img src="assets/logo/Loading.gif" alt="">
     </div>
   </div>
+
   <!-- Header Start-->
   <header>
     <nav class="navbar">
       <div class="nav-desktop">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <div class="logo"><a href="#">
-          <img class="logo" src="assets/logo/Bengkalis Logo.png" alt="Bengkalis, Riau" title="Bengkalis, Riau"/>
-        </div></a>
+          <div class="logo">
+            <a href="#">
+            <img class="logo" src="assets/logo/Bengkalis Logo.png" alt="Bengkalis, Riau" title="Bengkalis, Riau"/>
+            </a>
+          </div>
         <a href="#destination">Destination</a>
         <a href="#culture">Culture</a>
       </div>
@@ -36,40 +39,93 @@
         <a  href="#about"><img src="assets/logo/about.svg" alt="About Bengkalis" title="About Bengkalis"></a>
         <a class="" href="#home" ><img src="assets/logo/home.svg" alt="Home" title="Home"></a>
         <a  href="#destination"><img src="assets/logo/destination.svg" alt="Destination" title="Destination"></a>
-        <!-- <a  href="#destination"><img src="assets/logo/destination.svg" alt=""></a> -->
       </div>
     </nav>
-  </header>
+   </header>
   <!-- Header End -->
 
   <!-- Hero Start -->
   <section class="hero">
-    <main class="content">
+    <div class="content">
         <h1>Welcome to Bengkalis</h1>
         <h2>Negeri Junjugan</h2>
         <p>Discover the natural beauty, cultural richness, and friendliness of the people of Bengkalis</p>
-        <div class="btn"><a href="">Explore Bengkalis</a></div>  
+        <span class="btn"><a href="">Explore Bengkalis</a></span>  
         <div class="information">
-        <!-- <p>Masjid Istiqomah meruoakan...</p> -->
+          <p></p>
         </div>
-    </main>
-  </section>
+    </div>
+   </section>
     <!-- Hero End -->
 
     <!-- About Start -->
   <main class="about">
-    <div id="content">
-      <article>
-
-      </article>
-      <article>
-
-      </article>
-    </div>
-    <aside>
-
-    </aside>
-  </main>
+    <section class="about-content">
+      <div id="content">
+        <article>
+          <h2>Sejarah Bengkalis</h2>
+          <p>Bengkalis memiliki sejarah panjang dan kaya. Pulau ini pertama kali dihuni oleh suku Melayu pada abad ke-13. Pada abad ke-16, Bengkalis menjadi bagian dari Kesultanan Malaka. Setelah jatuhnya Malaka ke tangan Portugis pada tahun 1511, Bengkalis menjadi pusat perdagangan penting di Selat Malaka.</p>
+        </article>
+        <article>
+          <h2>Budaya dan Masyarakat</h2>
+          <p>Bengkalis memiliki budaya yang unik dan beragam. Masyarakat Bengkalis dikenal ramah dan terbuka. Tradisi dan seni lokal Bengkalis sangat kaya, termasuk tari zapin, musik Melayu, dan kerajinan tangan seperti songket dan tenun.</p>
+          <p>Makanan khas Bengkalis juga terkenal lezat, seperti gulai ikan patin, asam pedas, dan nasi lemak.</p>
+        </article>
+      </div>
+        <aside class="aside-content">
+          <h3>Geologi</h3>
+          <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d555075.0474171361!2d101.94696396053337!3d1.4371845822010276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d15cca9f748f39%3A0xa10c7fd8748adc01!2sPulau%20Bengkalis!5e1!3m2!1sid!2sid!4v1717600763400!5m2!1sid!2sid" style="border:2;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <p>Bengkalis adalah sebuah kabupaten di provinsi Riau, Indonesia. Ibu kota kabupaten ini terletak di Kota Bengkalis. Kabupaten Bengkalis memiliki luas wilayah 7.104,00 km² dan jumlah penduduk sekitar 500.000 jiwa.</p>
+          <p>Bengkalis merupakan salah satu daerah penghasil minyak bumi terbesar di Indonesia. Selain itu, Bengkalis juga memiliki potensi wisata yang cukup besar, seperti Pantai Rupat, Pantai Selatbaru, dan Pulau Beting Aceh.</p>
+        </aside>
+    </section>
+<!-- Wisata Start -->
+    <section class="wisata">
+      <div class="container">
+        <div class="title">
+          <h2>Wisata</h2>
+          <p>Bengkalis memiliki banyak tempat wisata yang menarik untuk dikunjungi, seperti Pantai Cermin, Taman Hutan Raya Sultan Syarif Hasyim, dan lainnya.</p>
+        </div>
+        <div class="list-wisata">
+          <div class="item">
+            <img src="assets/images/pantai-cermin.jpg" alt="Pantai Cermin">
+            <h3>Pantai Cermin</h3>
+            <p>Pantai Cermin merupakan salah satu pantai terindah di Bengkalis. Pantai ini memiliki pasir putih yang lembut dan air laut yang jernih.</p>
+          </div>
+          <div class="item">
+            <img src="assets/images/taman-hutan-raya-sultan-syarif-hasyim.jpg" alt="Taman Hutan Raya Sultan Syarif Hasyim">
+            <h3>Taman Hutan Raya Sultan Syarif Hasyim</h3>
+            <p>Taman Hutan Raya Sultan Syarif Hasyim merupakan taman hutan raya yang terletak di Bengkalis. Taman ini memiliki luas sekitar 1.000 hektar dan merupakan rumah bagi berbagai macam flora dan fauna.</p>
+          </div>
+          <!-- Tambahkan item tempat wisata lainnya di sini -->
+        </div>
+          <div class="btn"><a href="">Lihat Semua Tempat Wisata</a></div>
+      </div>
+     </section>
+  <!-- Wisata End -->
+  <!-- Galeri Start -->
+    <section class="galeri">
+      <div class="container">
+        <div class="title">
+          <h2>Galeri</h2>
+          <p>Berikut adalah beberapa foto yang menampilkan keindahan alam, budaya, dan masyarakat Bengkalis.</p>
+        </div>
+        <div class="list-galeri">
+          <div class="item">
+            <img src="assets/images/alam-1.jpg" alt="Alam Bengkalis">
+          </div>
+          <div class="item">
+            <img src="assets/images/budaya-1.jpg" alt="Budaya Bengkalis">
+          </div>
+          <div class="item">
+            <img src="assets/images/masyarakat-1.jpg" alt="Masyarakat Bengkalis">
+          </div>
+          <!-- Tambahkan item galeri lainnya di sini -->
+        </div>
+        <div class="btn"><a href="">Lihat Semua Foto</a></div>
+      </div>
+     </section>
+   </main>
   <!-- About End -->
 
   <!-- Footer Start -->
