add footer and finishing

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <img class="logo" src="assets/logo/Bengkalis Logo.png" alt="Bengkalis, Riau" title="Bengkalis, Riau"/>
             </a>
           </div>
-        <a href="#destination">Destination</a>
+        <a href="#geografi">Geografi</a>
         <a href="#culture">Culture</a>
       </div>
       
       <div class="nav-mobile">  
         <a  href="#about"><img src="assets/logo/about.svg" alt="About Bengkalis" title="About Bengkalis"></a>
         <a class="" href="#" ><img src="assets/logo/home.svg" alt="Home" title="Home"></a>
-        <a  href="#destination"><img src="assets/logo/destination.svg" alt="Destination" title="Destination"></a>
+        <a  href="#geografi"><img src="assets/logo/destination.svg" alt="Destination" title="Geografi"></a>
       </div>
     </nav>
    </header>
@@ -61,14 +61,10 @@
     <section class="about-content">
       <div id="content">
         <article>
-          <div>
-            <span class="previous" href=""><<</span>
-            <img id="information" src="assets/IstiqomahMosque2.jpg" alt="">
-            <span class="next" href="">>></span>
-          </div>
+          <img id="information" src="assets/IstiqomahMosque2.jpg" alt="">
           <label class="information" for="information">Masjid Istiqomah Bengkalis merupakan salah satu masjid terbesar dan tertua di Bengkalis dan menjadi salah satu ikon Kota Bengkalis.</label>
           <h2>Sejarah Bengkalis</h2>
-          <p>Bengkalis memiliki sejarah panjang dan kaya. Pulau ini pertama kali dihuni oleh suku Melayu pada abad ke-13. Pada abad ke-16, Bengkalis menjadi bagian dari Kesultanan Malaka. Setelah jatuhnya Malaka ke tangan Portugis pada tahun 1511, Bengkalis menjadi pusat perdagangan penting di Selat Malaka.</p>
+          <p>Bengkalis memiliki sejarah panjang dan kaya. Pulau ini pertama kali dihuni oleh suku Melayu pada abad ke-13. Pada abad ke-16, Bengkalis menjadi bagian dari Kesultanan Malaka. Setelah jatuhnya Malaka ke tangan Portugis pada tahun 1511, Bengkalis menjadi pusat perdagangan penting di Selat Malaka. Pada abad ke-19, Bengkalis menjadi bagian dari Hindia Belanda. Setelah kemerdekaan Indonesia pada tahun 1945, Bengkalis menjadi bagian dari Provinsi Riau.</p>
         </article>
         <article>
           <h2>Budaya dan Masyarakat</h2>
@@ -77,74 +73,69 @@
         </article>
       </div>
 
-      <aside class="aside-content">
-        <h3>Geologi</h3>
+      <aside id="geografi" class="aside-content">
+        <h3>Geografi</h3>
         <a href="#m1" style="position: relative;">
           <img class="enter" src="assets/logo/zoom.svg" alt="">
           <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d555075.0474171361!2d101.94696396053337!3d1.4371845822010276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d15cca9f748f39%3A0xa10c7fd8748adc01!2sPulau%20Bengkalis!5e1!3m2!1sid!2sid!4v1717600763400!5m2!1sid!2sid" style="border:2;" allowfullscreen="true" loading="eager"></iframe>
         </a>
-        
         <div id="m1" class="overlay">
           <a href="#about" class="close">close</a>
           <iframe class="map" scrolling="yes" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d555075.0474171361!2d101.94696396053337!3d1.4371845822010276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d15cca9f748f39%3A0xa10c7fd8748adc01!2sPulau%20Bengkalis!5e1!3m2!1sid!2sid!4v1717600763400!5m2!1sid!2sid" allowfullscreen="true" loading="eager" referrerpolicy="no-referrer-when-downgrade">
           </iframe>
         </div>
-
         <p>Bengkalis adalah sebuah kabupaten di provinsi Riau, Indonesia. Ibu kota kabupaten ini terletak di Kota Bengkalis. Kabupaten Bengkalis memiliki luas wilayah 7.104,00 km² dan jumlah penduduk sekitar 500.000 jiwa.</p>
         <p>Bengkalis merupakan salah satu daerah penghasil minyak bumi terbesar di Indonesia. Selain itu, Bengkalis juga memiliki potensi wisata yang cukup besar, seperti Pantai Rupat, Pantai Selatbaru, dan Pulau Beting Aceh.</p>
       </aside>
 
     </section>
-<!-- Wisata Start -->
-    <section class="wisata">
-      <div class="container">
-        <div class="title">
-          <h2>Wisata</h2>
-          <p>Bengkalis memiliki banyak tempat wisata yang menarik untuk dikunjungi, seperti Pantai Cermin, Taman Hutan Raya Sultan Syarif Hasyim, dan lainnya.</p>
+    <section class="extended" id="culture">
+      <h1>Tari Tradisional</h1>
+      <article class="ext1">
+        <img src="assets/zapin.jpg" alt="">
+        <div>
+          <h2>Tari Zapin: Gerakan Anggun yang Memukau</h2>
+          <p>Tari Zapin, dengan gerakannya yang anggun dan ritmis, merupakan salah satu bentuk seni yang paling populer di Bengkalis. Tarian ini, yang berasal dari Timur Tengah, telah berakar kuat dalam budaya Melayu dan menjadi simbol identitas budaya Bengkalis. Tari Zapin biasanya diiringi oleh musik tradisional Melayu yang dimainkan dengan alat musik seperti gambus, gendang, dan biola.</p>
         </div>
-        <div class="list-wisata">
-          <div class="item">
-            <img src="assets/images/pantai-cermin.jpg" alt="Pantai Cermin">
-            <h3>Pantai Cermin</h3>
-            <p>Pantai Cermin merupakan salah satu pantai terindah di Bengkalis. Pantai ini memiliki pasir putih yang lembut dan air laut yang jernih.</p>
-          </div>
-          <div class="item">
-            <img src="assets/images/taman-hutan-raya-sultan-syarif-hasyim.jpg" alt="Taman Hutan Raya Sultan Syarif Hasyim">
-            <h3>Taman Hutan Raya Sultan Syarif Hasyim</h3>
-            <p>Taman Hutan Raya Sultan Syarif Hasyim merupakan taman hutan raya yang terletak di Bengkalis. Taman ini memiliki luas sekitar 1.000 hektar dan merupakan rumah bagi berbagai macam flora dan fauna.</p>
-          </div>
-          <!-- Tambahkan item tempat wisata lainnya di sini -->
+      </article>
+      <article class="ext1">
+        <img src="assets/lemak manis.jpg" alt="">
+        <div>
+          <h2>Tari Zapin: Gerakan Anggun yang Memukau</h2>
+          <p>Tari Zapin, dengan gerakannya yang anggun dan ritmis, merupakan salah satu bentuk seni yang paling populer di Bengkalis. Tarian ini, yang berasal dari Timur Tengah, telah berakar kuat dalam budaya Melayu dan menjadi simbol identitas budaya Bengkalis. Tari Zapin biasanya diiringi oleh musik tradisional Melayu yang dimainkan dengan alat musik seperti gambus, gendang, dan biola.</p>
         </div>
-          <div class="btn"><a href="">Lihat Semua Tempat Wisata</a></div>
-      </div>
-     </section>
-  <!-- Wisata End -->
-  <!-- Galeri Start -->
-    <section class="galeri">
-      <div class="container">
-        <div class="title">
-          <h2>Galeri</h2>
-          <p>Berikut adalah beberapa foto yang menampilkan keindahan alam, budaya, dan masyarakat Bengkalis.</p>
-        </div>
-        <div class="list-galeri">
-          <div class="item">
-            <img src="assets/images/alam-1.jpg" alt="Alam Bengkalis">
-          </div>
-          <div class="item">
-            <img src="assets/images/budaya-1.jpg" alt="Budaya Bengkalis">
-          </div>
-          <div class="item">
-            <img src="assets/images/masyarakat-1.jpg" alt="Masyarakat Bengkalis">
-          </div>
-          <!-- Tambahkan item galeri lainnya di sini -->
-        </div>
-        <div class="btn"><a href="">Lihat Semua Foto</a></div>
-      </div>
-     </section>
+      </article>
+
+    </section>
    </main>
   <!-- About End -->
 
   <!-- Footer Start -->
+  <footer>
+    <div class="container">
+      <div class="social">
+        <a href="https://www.instagram.com/firmansyah_748">
+          <img src="assets/logo/instagram.png" alt="">
+          <p>Instagram</p>
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=100080356868143">
+          <img src="assets/logo/facebook.png" alt="">
+          <p>Facebook</p>
+        </a>
+        <a href="https://github.com/MhdFirmanSyah">
+          <img src="assets/logo/github.png" alt="">
+          <p>GitHub</p>
+        </a>
+        <a href="www.linkedin.com/in/mhdfirmansyah748">
+          <img src="assets/logo/linkedin.png" alt="">
+          <p>LinkedIn</p>
+        </a>
+      </div>
+      <div class="copyright">
+        <p>Created BY <a href="">Muhammad FirmanSyah</a>. | &copy; 2024.</p>
+      </div>
+    </div> 
+  </footer>
   <!-- Footer End -->
   <audio autoplay="true" preload="auto" loop src="assets/music/Ladyfingers.m4a"></audio>
   <script src="main.js"></script>
