--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <!-- Header End -->
 
   <!-- Hero Start -->
+<main>
   <section class="hero">
     <div class="content">
         <h1>Welcome to Bengkalis</h1>
@@ -57,7 +58,7 @@
 
     <!-- About Start -->
     <br id="about">
-  <main class="about">
+  <div class="about">
     <section class="about-content">
       <div id="content">
         <article>
@@ -107,7 +108,8 @@
       </article>
 
     </section>
-   </main>
+  </div>
+</main>
   <!-- About End -->
 
   <!-- Footer Start -->
